<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <Button
        android:id="@+id/sellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sellPressed"
        android:text="@string/sell_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/leaveMarketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="exitPressed"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/sellButton"
        android:text="@string/exit_button" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Goods"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/buyGoodsText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cargo_text"
        android:id="@+id/yourCargoText"
        android:layout_below="@+id/Goods"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cargoGoods"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/yourCargoText" />

    <TextView
        android:id="@+id/buyGoodsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/buy_goods_text" />

    <TextView
        android:id="@+id/openCargoSpots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/openCargoText"
        android:layout_marginLeft="20dp"
        android:layout_alignTop="@id/openCargoText"
        android:text="0" />

    <TextView
        android:id="@+id/openCargoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cargoGoods"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:text="@string/open_cargo_text" />

    <TextView
        android:id="@+id/moneyLeft"
        android:layout_alignTop="@+id/remainingMoneyText"
        android:layout_toRightOf="@id/remainingMoneyText"
        android:layout_alignStart="@id/openCargoSpots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:id="@+id/remainingMoneyText"
        android:layout_below="@id/openCargoText"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/remaining_money_text" />


</RelativeLayout>