<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPurple" />


    <TextView
        android:id="@+id/trader_encounter_banner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingTop="12dp"
        android:text="@string/encounter_label"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/trader_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/trader_text"
        android:textSize="23sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/goods_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/purchaseQuestion"
        android:fontFamily="@font/montserrat"
        android:text="@string/goods_label"
        android:textSize="16sp"
        android:paddingLeft="40dp"
        android:textColor="@android:color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/goods"
        android:layout_width="wrap_content"
        android:paddingLeft="40dp"
        android:layout_height="220dp"
        android:layout_below="@+id/goods_label"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat" />

    <TextView
        android:id="@+id/purchaseQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trader_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="40dp"
        android:paddingBottom="15dp"
        android:text="@string/trader_question"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/leaveTraderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:background="@color/colorPurple"
        android:fontFamily="@font/montserrat"
        android:text="@string/exit_button"
        android:textColor="@android:color/white" />


</RelativeLayout>