<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/drought_encounter">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/general_button"/>


    <TextView
        android:id="@+id/drought_encounter_banner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingTop="12dp"
        android:text="@string/encounter_label"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/drought_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingTop="15dp"
        android:text="@string/drought_text"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/drought_encounter_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drought_label"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="40dp"
        android:paddingTop="15dp"
        android:text="@string/drought_statement"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_change_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drought_encounter_statement"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingTop="10dp"
        android:text="@string/price_change_label"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/leaveDroughtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPurple"
        android:onClick="exitDrought"
        android:fontFamily="@font/montserrat"
        android:text="@string/exit_button"
        android:textColor="@android:color/white" />



</RelativeLayout>