<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    android:layoutDirection="ltr">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/general_button" />
    <TextView
        android:id="@+id/planet_info_banner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:paddingTop="12dp"
        android:text="@string/planet_info_banner"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/planet_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="@string/planet_info_name_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/planet_name_displayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/planet_name_label"
        android:layout_alignBottom="@+id/planet_name_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/planet_government_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/planet_name_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="@string/planet_info_government_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/planet_government_displayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/planet_government_label"
        android:layout_alignBottom="@+id/planet_government_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/planet_tech_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/planet_government_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="@string/planet_info_tech_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/planet_tech_displayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/planet_tech_label"
        android:layout_alignBottom="@+id/planet_tech_label"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="50dp"
        android:paddingTop="25dp"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <Button
        android:id="@+id/exit_planet_info_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/planet_tech_label"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:background="#F5F5F5"
        android:fontFamily="@font/montserrat"
        android:onClick="exitPlanetInfo"
        android:text="@string/exit_planet_button_text" />
    <Button
        android:id="@+id/deleteGame"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exit_planet_info_button"
        android:layout_marginRight="25dp"
        android:background="#F5F5F5"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:onClick="deleteGame"
        android:text="@string/delete_game" />
</RelativeLayout>